# sms4-backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
.test/resources/: readme.md
src/: account.rs  config.rs  lib.rs  main.rs  notification.rs  post.rs  resource.rs
src/account/: verify.rs
src/handle/: account.rs  mod.rs  notification.rs  post.rs  resource.rs
src/tests/: account.rs  mod.rs
