[package]
name = "sms4-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-macros = "0.4"
libaccount = { version = "0.1", git = "https://github.com/subitlab-buf/libaccount.git" }
dmds = "0.4"
dmds-tokio-fs = "0.3"
tokio = { version = "1.35", features = [
  "rt",
  "macros",
  "sync",
  "fs",
  "rt-multi-thread",
] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = { version = "0.11", default-features = false, features = [
  "serde",
  "smtp-transport",
  "hostname",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
time = { version = "0.3", features = ["serde-human-readable"] }
bytes = "1.5"
bincode = "1.3"
thiserror = "1.0"
rand = "0.8"
siphasher = "1.0"
highway = "1.1"
http-body-util = "0.1"

[dev-dependencies]
tower = "0.4"
serde_json = "1.0"
mime = "0.3"

[profile.release]
lto = "thin"
